--- a/.env.backend.example
+++ b/.env.backend.example
@@ -13,19 +13,19 @@ PORT=8000
 RUN_STARTUP_CHECKS="true"
 
 # Frontend URL (for CORS)
-FRONTEND_URL="https://saffron-staging.example.com"
+FRONTEND_URL="https://yourdomain.com"
 
 # API Base URL
-API_BASE_URL="https://saffron-staging.example.com"
+API_BASE_URL="https://yourdomain.com"
 
 # Email Configuration (optional - update with real credentials)
 EMAIL_HOST="mail.example.com"
 EMAIL_PORT=587
 EMAIL_SECURE="false"
-EMAIL_USER="noreply@saffron-staging.example.com"
+EMAIL_USER="noreply@yourdomain.com"
 EMAIL_PASS="email_password"
-EMAIL_FROM="noreply@saffron-staging.example.com"
-EMAIL_FROM_NAME="The Saffron Lounge"
+EMAIL_FROM="noreply@yourdomain.com"
+EMAIL_FROM_NAME="Your App Name"
 
 # Database Settings
 AUTO_SEED_ON_EMPTY=true
