--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,12 @@ SSH_USER=root
 SSH_KEY_PATH=/Users/sachinkumar/.ssh/id_rsa
 
 # Git Details
-GIT_REPO_URL=https://github.com/yourusername/YOUR_REPO.git
+GIT_REPO_URL=https://github.com/yourusername/your-repo.git
 GIT_TOKEN=github_pat_xxxxx
 GIT_BRANCH=main
 
 # Domain
-DOMAIN=saffron-staging.example.com
+DOMAIN=yourdomain.com
 
 # Node.js Version
 NODE_VERSION=22
