--- a/.env.frontend.example
+++ b/.env.frontend.example
@@ -1,7 +1,7 @@
 # API Configuration (all must use NEXT_PUBLIC_ prefix for client-side access)
-NEXT_PUBLIC_API_URL=https://saffron-staging.example.com/api
-NEXT_PUBLIC_WS_URL=wss://saffron-staging.example.com
-NEXT_PUBLIC_ADMIN_URL=https://saffron-staging.example.com
+NEXT_PUBLIC_API_URL=https://yourdomain.com/api
+NEXT_PUBLIC_WS_URL=wss://yourdomain.com
+NEXT_PUBLIC_ADMIN_URL=https://yourdomain.com
 
 # JWT Secret (server-side only, no NEXT_PUBLIC_ prefix)
 JWT_SECRET=production-jwt-secret-SAME-AS-BACKEND
