Refactor to modular structure with dynamic APP_NAME from .env
- Break monolithic sst.config.ts into organized modules
- Create config/ directory with focused module files:
  - types.ts: TypeScript interfaces
  - load-config.ts: Environment configuration loader
  - system-setup.ts: OS detection & software installation
  - ssl-setup.ts: SSL certificate management
  - git-deploy.ts: Repository deployment
  - build.ts: Backend & frontend builds
  - pm2-config.ts: Process manager configuration
  - apache-config.ts: Reverse proxy setup
  - final-setup.ts: Permissions & verification
- Add dynamic APP_NAME variable to .env
- Use APP_NAME for:
  - PM2 process names (app-backend, app-frontend)
  - Apache config files (app-http.conf, app-https.conf)
  - Log file names
  - Default deployment path (/var/www/APP_NAME)
- Update package.json name and description
- Update all documentation files
- Add README-MODULAR.md explaining the new structure

Benefits:
- Better maintainability and organization
- Each module handles single responsibility
- Easy to test and extend
- Cleaner main config file
- Truly generic and reusable across projects

--- a/.env.backend.example
+++ b/.env.backend.example
@@ -1,5 +1,5 @@
 # Database Configuration
-DATABASE_URL="mysql://saffron_user:STRONG_PASSWORD_HERE@localhost:3306/saffron_db"
+DATABASE_URL="mysql://app_user:STRONG_PASSWORD_HERE@localhost:3306/app_db"
 
 # JWT Configuration
 JWT_SECRET="production-jwt-secret-CHANGE-THIS-TO-RANDOM-STRING"
