--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Application Name (used for PM2 processes, Apache configs, and log files)
+APP_NAME=myapp
+
 # Server Details
 SERVER_IP=66.116.205.60
 SSH_USER=root
@@ -14,5 +17,5 @@ DOMAIN=yourdomain.com
 # Node.js Version
 NODE_VERSION=22
 
-# Deployment Path
-DEPLOYMENT_PATH=/var/www/saffron
+# Deployment Path (optional - defaults to /var/www/APP_NAME)
+DEPLOYMENT_PATH=/var/www/myapp
