Update example env files and add comprehensive deployment guide
- Enhance .env.example with detailed comments and all required variables
- Update .env.backend.example with clear sections and security notes
- Update .env.frontend.example with NEXT_PUBLIC_ prefix explanations
- Add comprehensive 'Deploying to Your Own Server' section in README
- Include step-by-step SSH setup, configuration, and deployment instructions
- Add common issues and solutions section
- Include verification steps and update procedures

--- a/.env.backend.example
+++ b/.env.backend.example
@@ -1,33 +1,55 @@
-# Database Configuration
-DATABASE_URL="mysql://app_user:STRONG_PASSWORD_HERE@localhost:3306/app_db"
+# ============================================
+# BACKEND ENVIRONMENT CONFIGURATION
+# ============================================
+# This file will be uploaded to the server at: DEPLOYMENT_PATH/backend/.env
+# Copy this file to .env.backend and update with your actual values
+# Usage: cp .env.backend.example .env.backend
 
-# JWT Configuration
-JWT_SECRET="production-jwt-secret-CHANGE-THIS-TO-RANDOM-STRING"
-JWT_REFRESH_SECRET="production-refresh-secret-CHANGE-THIS-TOO"
+# ============================================
+# DATABASE CONFIGURATION
+# ============================================
+# MySQL/MariaDB connection string
+# Format: mysql://username:password@host:port/database
+# The database and user will be created automatically during deployment
+DATABASE_URL="mysql://app_user:CHANGE_THIS_STRONG_PASSWORD@localhost:3306/app_db"
+
+# ============================================
+# JWT AUTHENTICATION
+# ============================================
+# Generate strong random strings for these (use: openssl rand -base64 32)
+JWT_SECRET="CHANGE_THIS_TO_RANDOM_STRING_32_CHARS_OR_MORE"
+JWT_REFRESH_SECRET="CHANGE_THIS_TO_DIFFERENT_RANDOM_STRING"
 JWT_EXPIRES_IN="7d"
 JWT_REFRESH_EXPIRES_IN="30d"
 
-# Server Configuration
+# ============================================
+# SERVER CONFIGURATION
+# ============================================
 NODE_ENV="production"
 PORT=8000
 RUN_STARTUP_CHECKS="true"
 
-# Frontend URL (for CORS)
+# Frontend URL (for CORS - should match your DOMAIN)
 FRONTEND_URL="https://yourdomain.com"
 
 # API Base URL
 API_BASE_URL="https://yourdomain.com"
 
-# Email Configuration (optional - update with real credentials)
-EMAIL_HOST="mail.example.com"
+# ============================================
+# EMAIL CONFIGURATION (Optional)
+# ============================================
+# Update these if your app sends emails
+EMAIL_HOST="smtp.example.com"
 EMAIL_PORT=587
 EMAIL_SECURE="false"
 EMAIL_USER="noreply@yourdomain.com"
-EMAIL_PASS="email_password"
+EMAIL_PASS="your_email_password"
 EMAIL_FROM="noreply@yourdomain.com"
 EMAIL_FROM_NAME="Your App Name"
 
-# Database Settings
+# ============================================
+# DATABASE SETTINGS
+# ============================================
 AUTO_SEED_ON_EMPTY=true
 DB_CONNECTION_TIMEOUT=10000
 DB_MAX_RETRIES=5
