--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,52 @@
+# ============================================
+# MAIN DEPLOYMENT CONFIGURATION
+# ============================================
+# Copy this file to .env and update with your actual values
+# Usage: cp .env.example .env
+
 # Application Name (used for PM2 processes, Apache configs, and log files)
+# This should be unique if deploying multiple apps on the same server
 APP_NAME=myapp
 
-# Server Details
-SERVER_IP=66.116.205.60
-SSH_USER=root
-SSH_KEY_PATH=/Users/sachinkumar/.ssh/id_rsa
+# ============================================
+# SERVER CONNECTION
+# ============================================
+# Your server's IP address or domain name
+SERVER_IP=your-server-ip-or-domain.com
 
-# Git Details
+# SSH username (usually 'root' for VPS)
+SSH_USER=root
+
+# Path to your SSH private key
+SSH_KEY_PATH=/Users/yourusername/.ssh/id_rsa
+
+# Optional: SSH password (if using password auth instead of key)
+# SSH_PASS=your_ssh_password
+
+# ============================================
+# GIT REPOSITORY
+# ============================================
+# Your Git repository URL
 GIT_REPO_URL=https://github.com/yourusername/your-repo.git
-GIT_TOKEN=github_pat_xxxxx
+
+# GitHub Personal Access Token (with repo permissions)
+# Generate at: https://github.com/settings/tokens
+GIT_TOKEN=github_pat_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# Branch to deploy
 GIT_BRANCH=main
 
-# Domain
+# ============================================
+# DOMAIN CONFIGURATION
+# ============================================
+# Your production domain name (SSL certificate will be obtained for this domain)
 DOMAIN=yourdomain.com
 
-# Node.js Version
+# ============================================
+# SERVER SOFTWARE
+# ============================================
+# Node.js version to install (e.g., 18, 20, 22)
 NODE_VERSION=22
 
-# Deployment Path (optional - defaults to /var/www/APP_NAME)
+# Deployment path on server (optional - defaults to /var/www/APP_NAME)
 DEPLOYMENT_PATH=/var/www/myapp
