--- a/.env.frontend.example
+++ b/.env.frontend.example
@@ -1,10 +1,32 @@
-# API Configuration (all must use NEXT_PUBLIC_ prefix for client-side access)
+# ============================================
+# FRONTEND ENVIRONMENT CONFIGURATION
+# ============================================
+# This file will be uploaded to the server at: DEPLOYMENT_PATH/frontend/.env.production
+# Copy this file to .env.frontend and update with your actual values
+# Usage: cp .env.frontend.example .env.frontend
+
+# ============================================
+# API CONFIGURATION
+# ============================================
+# IMPORTANT: All client-side variables MUST use NEXT_PUBLIC_ prefix
+
+# Backend API URL (should match your DOMAIN + /api)
 NEXT_PUBLIC_API_URL=https://yourdomain.com/api
+
+# WebSocket URL (should match your DOMAIN with wss:// protocol)
 NEXT_PUBLIC_WS_URL=wss://yourdomain.com
+
+# Admin panel URL (if applicable)
 NEXT_PUBLIC_ADMIN_URL=https://yourdomain.com
 
-# JWT Secret (server-side only, no NEXT_PUBLIC_ prefix)
-JWT_SECRET=production-jwt-secret-SAME-AS-BACKEND
+# ============================================
+# JWT SECRET (Server-side only)
+# ============================================
+# NO NEXT_PUBLIC_ prefix - not exposed to browser
+# Must match the JWT_SECRET in .env.backend
+JWT_SECRET=CHANGE_THIS_TO_SAME_SECRET_AS_BACKEND
 
-# Environment
+# ============================================
+# ENVIRONMENT
+# ============================================
 NODE_ENV=production
