Add support for custom environment file paths
- Add BACKEND_ENV_FILE and FRONTEND_ENV_FILE variables to .env
- Allow specifying custom paths like 'full-stack/backend/.env.production'
- Defaults to .env.backend and .env.frontend if not specified
- Verify environment files exist before deployment (fail fast)
- Display which environment files are being used during deployment
- Update .env.example with new variables and examples
- Update README with custom environment file documentation

Use cases:
- Environment files stored in app repository
- Multiple environments (.env.staging, .env.production)
- Centralized environment management

Example usage in .env:
BACKEND_ENV_FILE=full-stack/backend/.env.production
FRONTEND_ENV_FILE=full-stack/frontend/.env.production

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,19 @@ NODE_VERSION=22
 
 # Deployment path on server (optional - defaults to /var/www/APP_NAME)
 DEPLOYMENT_PATH=/var/www/myapp
+
+# ============================================
+# ENVIRONMENT FILES (Optional)
+# ============================================
+# Specify which local environment files to copy to the server
+# Useful if you have multiple environment files (.env.production, .env.staging, etc.)
+
+# Backend environment file (defaults to .env.backend)
+BACKEND_ENV_FILE=.env.backend
+
+# Frontend environment file (defaults to .env.frontend)
+FRONTEND_ENV_FILE=.env.frontend
+
+# Example: Use production environment files from your app repository
+# BACKEND_ENV_FILE=full-stack/backend/.env.production
+# FRONTEND_ENV_FILE=full-stack/frontend/.env.production
